--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Palanquin:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .select-category {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url("./assets/icon/arrow-down.svg") white no-repeat 98.5% !important;
+    background: url("./assets/icon/arrow-down.svg") white no-repeat calc(100% - 10px)
+  }
+}
 
 @layer components {
   .headline-1 {
