--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,13 @@
     line-height: 150%;
   }
 
+  .headline-4 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 150%;
+  }
+
   .title-1 {
     /* Title/Title 1 */
     font-style: normal;
